--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "type": "git",
     "url": "git+https://jpsecher@bitbucket.org/jpsecher/k8s-nodejs-pipeline.git"
   },
+  "browserslist": {},
   "devDependencies": {
+    "chai": "^4.2.0",
+    "cypress": "^3.4.1",
     "mocha": "^4.1.0"
   },
   "dependencies": {},
   "scripts": {
+    "cy:open": "npx cypress@latest open",
+    "cy:run": "npx cypress@latest run",
+    "test:units": "mocha src/lib/**/*_test.js",
     "postinstall": "./scripts/setup-node-env.sh"
-  },
-  "browserslist": {}
+  }
 }
