--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "cy:open": "npx cypress@latest open",
     "cy:run": "npx cypress@latest run",
-    "test:units": "mocha src/lib/**/*_test.js src/server/**/*_test.js",
+    "test:units": "mocha src/lib/**/*_test.js src/backend/**/*_test.js src/frontend/**/*_test.js",
     "postinstall": "./scripts/setup-node-env.sh"
   }
 }
