--- a/src/Dockerfile.backend
+++ b/src/Dockerfile.backend
@@ -3,10 +3,8 @@
 ##
 FROM node:alpine AS base
 RUN apk add --no-cache nodejs-current tini
-ENV HOME=/home/app
-RUN addgroup -S app && \
-    adduser -S -h $HOME -s /bin/false -G app app
-USER app
+ENV HOME=/home/node
+USER node
 WORKDIR $HOME
 ENTRYPOINT ["/sbin/tini", "--"]
 
@@ -40,7 +38,7 @@ RUN npm run backend:units
 ## Production
 ##
 FROM production-dependencies AS production
-COPY backend ./backend
-COPY shared ./shared
+COPY --from=test $HOME/backend ./backend
+COPY --from=test $HOME/shared ./shared
 EXPOSE 3000
-CMD ["npm", "run", "backend"]
+CMD ["node", "backend/app.js"]
