--- a/src/Dockerfile.frontend
+++ b/src/Dockerfile.frontend
@@ -38,8 +38,8 @@ RUN npm run frontend:units
 ## Production
 ##
 FROM production-dependencies AS production
-COPY --from=test $HOME/frontend ./frontend
-COPY --from=test $HOME/backend ./backend
-COPY --from=test $HOME/shared ./shared
+COPY --from=test $HOME/frontend ./frontend/
+COPY --from=test $HOME/backend/config.js ./backend/
+COPY --from=test $HOME/shared ./shared/
 EXPOSE 5000
 CMD ["node", "frontend/app.js"]
