--- a/src/Dockerfile-frontend
+++ b/src/Dockerfile-frontend
@@ -32,13 +32,14 @@ RUN npm set progress=false && \
 ##
 FROM test-dependencies AS test
 COPY . ./
-RUN npm run backend:units
+RUN npm run frontend:unit
 
 ##
 ## Production
 ##
 FROM production-dependencies AS production
-COPY --from=test $HOME/backend ./backend/
+COPY --from=test $HOME/frontend ./frontend/
+COPY --from=test $HOME/backend/config.js ./backend/
 COPY --from=test $HOME/shared ./shared/
-EXPOSE 3000
-CMD ["node", "backend/app.js"]
+EXPOSE 5000
+CMD ["node", "frontend/app.js"]
