Only watch relevant files.

--- a/garden.yml
+++ b/garden.yml
@@ -10,7 +10,7 @@ providers:
       - devel
   - name: kubernetes
     context: gke_kaleidoscope-1-nodejs_europe-west1-b_garden-1
-    # namespace: default
+    # namespace: staging
     defaultHostname: kaleidoscope.dk
     buildMode: cluster-docker
     setupIngressController: nginx
