Missing file for frontend build.

--- a/src/garden.yml
+++ b/src/garden.yml
@@ -36,6 +36,7 @@ include:
   - package*.json
   - setup-npm-env.sh
   - frontend/*
+  - backend/config.js
   - shared/*
 services:
   - name: frontend
