--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -12,10 +12,11 @@ ENTRYPOINT ["/sbin/tini", "--"]
 ## Production dependencies
 ##
 FROM base AS production-dependencies
-COPY package.json package-lock.json setup-npm-env.sh ./
+RUN mkdir shared backend frontend
+WORKDIR $HOME/frontend
+COPY frontend/package*.json frontend/setup-npm-env.sh ./
 RUN touch config.js && \
-    mkdir shared fixtures backend frontend && \
-    npm set progress=false && \
+	npm set progress=false && \
     npm config set depth 0 && \
     npm install --only=production
 
@@ -28,18 +29,25 @@ RUN npm set progress=false && \
     npm install
 
 ##
+## Source code
+##
+FROM production-dependencies AS source
+COPY shared/ ../shared/
+COPY backend/config.js ../backend/
+COPY frontend/ ./
+
+##
 ## Test
 ##
 FROM test-dependencies AS test
-COPY . ./
-RUN npm run frontend:unit
+COPY --from=source $HOME/shared/ $HOME/shared/
+COPY --from=source $HOME/backend/ $HOME/backend/
+COPY --from=source $HOME/frontend/ $HOME/frontend/
+RUN npm test
 
 ##
 ## Production
 ##
-FROM production-dependencies AS production
-COPY --from=test $HOME/frontend ./frontend/
-COPY --from=test $HOME/backend/config.js ./backend/
-COPY --from=test $HOME/shared ./shared/
+FROM source AS production
 EXPOSE 5000
-CMD ["node", "frontend/app.js"]
+CMD ["node", "app.js"]
