connect shared modules using build dependencies

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -4,7 +4,7 @@
 FROM node:alpine AS base
 RUN apk add --no-cache nodejs-current tini
 ENV HOME=/home/node
-USER node
+# USER node # http://npm.github.io/installation-setup-docs/installing/a-note-on-permissions.html
 WORKDIR $HOME
 ENTRYPOINT ["/sbin/tini", "--"]
 
@@ -12,27 +12,25 @@ ENTRYPOINT ["/sbin/tini", "--"]
 ## Production dependencies
 ##
 FROM base AS production-dependencies
-RUN mkdir shared backend frontend
+COPY shared shared
+RUN mkdir backend frontend
 WORKDIR $HOME/frontend
-COPY frontend/package*.json frontend/setup-npm-env.sh ./
+COPY frontend/package*.json ./
 RUN touch config.js && \
-	npm set progress=false && \
-    npm config set depth 0 && \
-    npm install --only=production
+    npm set progress=false && \
+    npm config set depth 0
+RUN npm install --only=production
 
 ##
 ## Test dependencies
 ##
 FROM production-dependencies AS test-dependencies
-RUN npm set progress=false && \
-    npm config set depth 0 && \
-    npm install
+RUN npm install
 
 ##
 ## Source code
 ##
 FROM production-dependencies AS source
-COPY shared/ ../shared/
 COPY backend/config.js ../backend/
 COPY frontend/ ./
 
@@ -40,7 +38,6 @@ COPY frontend/ ./
 ## Test
 ##
 FROM test-dependencies AS test
-COPY --from=source $HOME/shared/ $HOME/shared/
 COPY --from=source $HOME/backend/ $HOME/backend/
 COPY --from=source $HOME/frontend/ $HOME/frontend/
 RUN npm test
