--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mylib": "file:../shared",
     "nodemon": "^1.19.2",
     "request": "^2.88.0"
   },
