--- a/src/shared/package.json
+++ b/src/shared/package.json
@@ -4,6 +4,7 @@
   "description": "Minimal build & deploy pipeline - shared",
   "author": "Jens Peter Secher",
   "license": "ISC",
+  "main": "tcp.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/featsco/hello-garden.git"
@@ -13,7 +14,6 @@
     "mocha": "^4.1.0"
   },
   "scripts": {
-    "test": "mocha *_test.js",
-    "postinstall": "./setup-npm-env.sh"
+    "test": "mocha *_test.js"
   }
 }
