move garden file inside the modules

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -15,7 +15,7 @@ FROM base AS production-dependencies
 COPY shared shared
 RUN mkdir backend
 WORKDIR $HOME/backend
-COPY backend/package*.json ./
+COPY package*.json ./
 RUN touch config.js && \
     npm set progress=false && \
     npm config set depth 0
@@ -31,7 +31,7 @@ RUN npm install
 ## Source code
 ##
 FROM production-dependencies AS source
-COPY backend/ ./
+COPY ./ ./
 
 ##
 ## Test
