--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mybackend",
+  "name": "backend",
   "version": "0.3.0",
   "description": "Minimal build & deploy pipeline - backend",
   "author": "Jens Peter Secher",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mylib": "file:../shared",
+    "mylib": "file:../mylib",
     "nodemon": "^1.19.2",
     "request": "^2.88.0"
   },
