--- a/src/mylib/Dockerfile
+++ b/src/mylib/Dockerfile
@@ -2,11 +2,10 @@
 ## Base
 ##
 FROM node:alpine AS base
-RUN apk add --no-cache nodejs-current tini
+RUN apk add --no-cache nodejs-current
 ENV HOME=/home/node
 USER node
 WORKDIR $HOME
-ENTRYPOINT ["/sbin/tini", "--"]
 
 ##
 ## Production dependencies
@@ -14,16 +13,14 @@ ENTRYPOINT ["/sbin/tini", "--"]
 FROM base AS production-dependencies
 COPY package*.json ./
 RUN npm set progress=false && \
-    npm config set depth 0 && \
-    npm install --only=production
+    npm clean-install --quiet --depth 0 --only=production
 
 ##
 ## Test dependencies
 ##
 FROM production-dependencies AS test-dependencies
 RUN npm set progress=false && \
-    npm config set depth 0 && \
-    npm install
+    npm clean-install --quiet --depth 0
 
 ##
 ## Source code
