Hot reload works again for frontend & backend.

--- a/src/backend/garden.yml
+++ b/src/backend/garden.yml
@@ -9,7 +9,7 @@ buildArgs:
   MYLIB_IMAGE_VERSION: ${modules.mylib.version}
 hotReload:
   sync:
-    - target: /home/node/
+    - target: /home/node/backend/
 services:
   - name: backend
     ports:
