Squashed commit of the following:
commit b0ccbfea8378f394acf97cb035f33d26197d84c5
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Mon Nov 11 22:13:45 2019 +0100

    Hot reload works again for frontend & backend.

commit 0fb797d2aa9dee70878783a1cce8c64adaad07f6
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Mon Nov 11 21:55:49 2019 +0100

    Ignore things not needed for building docker images.

commit 25378ba6585f4d63b80bcd033903eb57fc4d4dc9
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Mon Nov 11 20:38:57 2019 +0100

    Break frontend build dependency on backend, and update readme.

commit c883f3b15d5ffa886fc9e3f8d9feb205be9f49c7
Author: zVictor <victor0110@msn.com>
Date:   Mon Nov 11 11:52:30 2019 +0100

    make builds depend on docker images instead of copies of files

commit aef479cb4e0aa2da98782049dbedadbfadf5ac68
Author: zVictor <victor0110@msn.com>
Date:   Fri Nov 8 11:17:52 2019 +0100

    update lock files

commit 76345db408b5073e5844ec0ed8cb6ef84bdaa088
Author: zVictor <victor0110@msn.com>
Date:   Fri Nov 8 11:11:43 2019 +0100

    rename mylib folder

commit c5f0234ee9f845c71938412148fc828c8b3891f0
Author: zVictor <victor0110@msn.com>
Date:   Thu Nov 7 21:35:12 2019 +0100

    encapsulate shared modules

commit 86f0cc831c828240f1a00cad89284b530552d328
Author: zVictor <victor0110@msn.com>
Date:   Thu Nov 7 21:25:19 2019 +0100

    unify module names

commit 8aceb9dab5771c0bd24a59f510f485aa97bd40c6
Author: zVictor <victor0110@msn.com>
Date:   Thu Nov 7 21:19:18 2019 +0100

    move garden file inside the modules

commit c77be466f3f984c50479f4a8eae762cc233180f2
Author: zVictor <victor0110@msn.com>
Date:   Thu Nov 7 21:03:57 2019 +0100

    connect shared modules using build dependencies

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,4 +1,10 @@
 ##
+## Images of shared modules
+##
+ARG MYLIB_IMAGE_VERSION=latest
+FROM mylib:${MYLIB_IMAGE_VERSION} AS mylib
+
+##
 ## Base
 ##
 FROM node:alpine AS base
@@ -12,36 +18,29 @@ ENTRYPOINT ["/sbin/tini", "--"]
 ## Production dependencies
 ##
 FROM base AS production-dependencies
-RUN mkdir shared backend frontend
+COPY --from=mylib / mylib
+RUN mkdir frontend
 WORKDIR $HOME/frontend
-COPY frontend/package*.json frontend/setup-npm-env.sh ./
-RUN touch config.js && \
-	npm set progress=false && \
-    npm config set depth 0 && \
-    npm install --only=production
+COPY package*.json ./
+RUN npm set progress=false && \
+    npm clean-install --quiet --depth 0 --only=production
 
 ##
 ## Test dependencies
 ##
 FROM production-dependencies AS test-dependencies
-RUN npm set progress=false && \
-    npm config set depth 0 && \
-    npm install
+RUN npm clean-install
 
 ##
 ## Source code
 ##
 FROM production-dependencies AS source
-COPY shared/ ../shared/
-COPY backend/config.js ../backend/
-COPY frontend/ ./
+COPY ./ ./
 
 ##
 ## Test
 ##
 FROM test-dependencies AS test
-COPY --from=source $HOME/shared/ $HOME/shared/
-COPY --from=source $HOME/backend/ $HOME/backend/
 COPY --from=source $HOME/frontend/ $HOME/frontend/
 RUN npm test
 
