--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myfrontend",
+  "name": "frontend",
   "version": "0.3.0",
   "description": "Minimal build & deploy pipeline - frontend",
   "author": "Jens Peter Secher",
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mylib": "file:../mylib",
     "nodemon": "^1.19.2",
     "request": "^2.88.0"
   },
   "scripts": {
     "start": "nodemon app.js",
-    "test": "mocha *_test.js",
-    "postinstall": "./setup-npm-env.sh"
+    "test": "mocha *_test.js"
   }
 }
