Squashed commit of the following:
commit 0b9c9ab5f28e266e36af546e39c5102d11af92d9
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Sun Nov 17 13:36:23 2019 +0100

    Disable integration test to make sure garden works.

commit 7238837c65f29e3fcbabac3d996c2aa0e91b68bd
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Fri Nov 15 13:49:54 2019 +0100

    Hardcoded secret in frontend.

commit 35e787ef295d581bc2a91f54bfa14053d18c836f
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Fri Nov 15 13:08:40 2019 +0100

    Handle 401 from server.

commit 064b8dc2c51537c5e214812eca33140fe24f09ab
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Fri Nov 15 11:05:59 2019 +0100

    Start fronend integration tests.

commit ae8dedd57d992ee069890b99fe8ee673f4f22e4c
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Fri Nov 15 10:57:33 2019 +0100

    Integration test uses env vars for locating services.

commit f360b717cd60c6bbf474dbeda5258806e194d49e
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Thu Nov 14 22:15:49 2019 +0100

    Renamed mylib to lib to make garden/non-garden stuff clearer.

commit 5fd3c85b02ee0764751b71158819d02c7002b135
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Thu Nov 14 21:52:26 2019 +0100

    Integration test of backend.

commit 21e7206ecabd19025446520157e23c8f6dfb5800
Merge: 989c334 c0b9fe8
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Thu Nov 14 21:21:17 2019 +0100

    Merge branch 'master' into secrets

commit 989c3342e745b45be19d4663a612a2ac7596d286
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Thu Nov 14 21:03:46 2019 +0100

    Move to prepare merge

commit e77eb65e608c952f060847cab5b11eebb012a59e
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Fri Nov 8 15:03:13 2019 +0100

    WIP: removing setup scripts.

commit 5472497cd43aeca2a89d4cac123aebe416161aef
Author: Jens Peter Secher <jpsecher@gmail.com>
Date:   Fri Nov 8 09:14:26 2019 +0100

    WIP: integration tests.

commit 5b17

--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Minimal build & deploy pipeline - backend",
   "author": "Jens Peter Secher",
   "license": "ISC",
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mylib": "file:../mylib",
+    "express-basic-auth": "^1.2.0",
+    "lib": "file:../lib",
     "nodemon": "^1.19.2",
     "request": "^2.88.0"
   },
