--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^4.1.0",
-    "supertest": "^4.0.2"
+    "nock": "^11.7.0",
+    "supertest": "^4.0.2",
+    "zombie": "^6.1.4"
   },
   "dependencies": {
     "express": "^4.17.1",
