Trying to get integraion test to work in Garden.

--- a/src/frontend/garden.yml
+++ b/src/frontend/garden.yml
@@ -15,6 +15,7 @@ services:
   - name: frontend
     ports:
       - name: http
+        servicePort: 80
         containerPort: 5000
     healthCheck:
       httpGet:
