--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -3,6 +3,7 @@
 ##
 ARG MYLIB_IMAGE_VERSION=latest
 FROM mylib:${MYLIB_IMAGE_VERSION} AS mylib
+# Works on staging: FROM 127.0.0.1:5000/staging/mylib:${MYLIB_IMAGE_VERSION} AS mylib
 
 ##
 ## Base
