--- a/src/frontend/garden.yml
+++ b/src/frontend/garden.yml
@@ -6,8 +6,8 @@ build:
   dependencies:
     - mylib
 buildArgs:
+  MYLIB_IMAGE_NAME: ${modules.mylib.outputs.deployment-image-name}
   MYLIB_IMAGE_VERSION: ${modules.mylib.version}
-  BACKEND_IMAGE_VERSION: ${modules.mybackend.version}
 hotReload:
   sync:
     - target: /home/node/frontend/
