--- a/src/integration/Dockerfile
+++ b/src/integration/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR $HOME
 RUN mkdir integration
 WORKDIR $HOME/integration
 COPY package*.json ./
-RUN npm set progress=false && \
-    npm clean-install --quiet --depth 0
+RUN npm set progress=false && npm config set depth 0
+RUN npm clean-install --quiet
 COPY ./ ./
 ENTRYPOINT ["npm"]
 CMD ["test"]
